fixed homepage bug. mobile media query in safari was stretching photo out. added height 100%

--- a/base/static/base/css/base.css
+++ b/base/static/base/css/base.css
@@ -112,9 +112,9 @@ footer {
 
 
 
-@media (min-width: 576px) {    }
+@media screen and (min-width: 576px) {    }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
 	.navbar-nav {
 		padding-top:0;
 		padding-bottom:0;
@@ -128,10 +128,10 @@ footer {
 	}
 } 
 
-@media (min-width: 992px) {    } 
+@media screen and (min-width: 992px) {    } 
 
-@media (min-width: 1200px) {    } 
+@media screen and (min-width: 1200px) {    } 
 
-@media (min-width: 1400px) {    } 
+@media screen and (min-width: 1400px) {    } 
 
-@media (min-width: 1600px) {    } 
+@media screen and (min-width: 1600px) {    } 
