--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -28,7 +28,8 @@
 }
 
 #main-block-image {
-	width:95%;
+	width: 95%;
+	height: 100%;
 }
 
 
